<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_map_server_start</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="admin@todo.todo">admin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <launch file="launch/nav2_map_server_start.launch.py"/>
    <launch file="launch/nav2_bringup.launch.py"/>
    <launch file="launch/nav2_custom_bringup.launch.py"/>
    <launch file="launch/visualize_map.launch.py"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
